--- a/index.html
+++ b/index.html
@@ -7,29 +7,64 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>A Pauly Made Todo List</title>
+        <title>intakt &#8226 a better to-do list</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="preconnect" href="https://fonts.gstatic.com">
+        <link href="https://fonts.googleapis.com/css2?family=Candal&display=swap" rel="stylesheet">
+        <link rel="preconnect" href="https://fonts.gstatic.com">
+        <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300&display=swap" rel="stylesheet">
+
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <!--[if lt IE 7]>
-            <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
-        <![endif]-->
-        <h1>A Pauly Made Todo List</h1>
-        <div class="sidebar">
-            <h2>Projects</h2>
-            <button id="add-project">Add Project</button>
-            <div id="projects-main">
-                <ul id='projects-list'></ul>
-            </div>
-        </div>
         <div class="container">
-            <div class="main">
-                <h3 id="project-name"></h3>
-                <ul id ="project-view"></ul>
+            <div class="header">
+                <h1 id="logo">intakt &#8226 <span id="tagline"> a better to-do list.</span></h1>
+            </div>
+            <!--[if lt IE 7]>
+                <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
+            <![endif]-->
+            <div class="sidebar">
+                <h5 id="projects-heading">Projects</h5>
+                <div id="projects-main">
+                    <ul id='projects-list'></ul>
+                </div>
+                <button id="add-project">Add Project</button>
+                <div id="add-project-container"></div>
+            </div>
+            <div class="todos">
+                <div class="main" id="todo-main">
+                    <h5 id="project-name"></h5>
+                    <ul id="project-view"></ul>
+                </div>
             </div>
         </div>
-        <script src="index.js" async defer></script>
+        <script src="./dist/main.js" async defer></script>
+        <!-- [1] -->
+        <div class="modal micromodal-slide" id="modal-1" aria-hidden="true">
+            <div class="modal__overlay" tabindex="-1" data-micromodal-close>
+              <div class="modal__container" role="dialog" aria-modal="true" aria-labelledby="modal-1-title">
+                <header class="modal__header">
+                  <h2 class="modal__title" id="modal-1-title">
+                    Your todo
+                  </h2>
+                  <button class="modal__close" aria-label="Close modal" data-micromodal-close></button>
+                </header>
+                <main class="modal__content" id="modal-1-content">
+                    <h5>Comments</h5>
+                    <textarea name="Comments" cols="40" rows="5" id="comments-input"></textarea>
+                    <h5>Due Date</h5>
+                    <div>
+                        <input type="date" name="date" id="due-date-input" placeholder="select date" autocomplete="off">
+                    </div>
+                </main>
+                <footer class="modal__footer">
+                  <button aria-label="Close modal" data-micromodal-close class="modal__btn modal__btn-primary" id="modal-save-changes">Save Changes</button>
+                  <button class="modal__btn" data-micromodal-close aria-label="Close this dialog window">Cancel</button>
+                </footer>
+              </div>
+            </div>
+          </div>
     </body>
 </html>
