local storage for new projects

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <body>
         <div class="container">
             <div class="header">
-                <h1 id="logo">intakt &#8226 <span id="tagline"> a better to-do list.</span></h1>
+                <h1 id="logo">intakt&nbsp;<span id="logo-bullet"> &#8226</span> <span id="tagline"> a better to-do list.</span></h1>
             </div>
             <!--[if lt IE 7]>
                 <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
